workshop3/bggapp-deployment-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: bggns
  name: bggapp-deployment-v1
  labels:
    name: bggapp-deployment-v1
spec:
  replicas: 1
  selector: 
    matchLabels:
      name: bggapp-pod-v1
  strategy:
    rollingUpdate:
      maxSurge : 1
      maxUnavailable: 0
  template:   
    metadata:
      name: bggapp-pod-v1
      labels:
        name: bggapp-pod-v1
    spec:
      containers:
      - name: bggapp-container-v1
        image: stackupiss/bgg-backend:v1
        args:
        - --prefix
        - /v1
        imagePullPolicy: IfNotPresent
        resources:
          requests: 
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata: 
  namespace: bggns
  name: bggapp-service-v1
  labels:
    name: bggapp-service-v1
spec:
  type: ClusterIP
  selector:
    name: bggapp-pod-v1
  ports:
  - port: 8080
    targetPort: 3000
