workshop3/bggdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: bggns
  name: bggdb-deployment
  labels:
    name: bggdb-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      name: bggdb-pod
  template:   
    metadata:
      name: bggdb-pod
      labels:
        name: bggdb-pod
    spec:
      volumes: 
      - name: bggdb-vol
        persistentVolumeClaim:
          claimName: data-pvc
      containers:
      - name: bggdb-container
        image: stackupiss/bgg-database:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts: 
        - name: bggdb-vol
          mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata: 
  namespace: bggns
  name: bggdb-service
  labels:
    name: bggdb-service
spec:
  type: ClusterIP
  selector:
    name: bggdb-pod
  ports:
  - port: 3306
    targetPort: 3306
