workshop3/bgg-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    name: bgg-ing
  # annotation:
  #   nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName : nginx
  rules:
  - host: bgg-144.126.241.80.nip.io
    http:
      paths: 
      - path: /v1
        pathType: Prefix
        backend:
          service: 
            name: bggapp-service-v1
            port:
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service: 
            name: bggapp-service-v2
            port:
              number: 8080
